apps/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: paperless-ngx
    app.kubernetes.io/managed-by: kustomize
