apps/paperless-ngx/statefulset.yaml
---
# Source: paperless-ngx/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
    part-of: paperless-ngx
spec:
  serviceName: paperless-ngx
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
        part-of: paperless-ngx
    spec:
      serviceAccountName: paperless-ngx
      automountServiceAccountToken: false
      containers:
        - name: paperless-ngx
          image: "ghcr.io/paperless-ngx/paperless-ngx:2.14.7"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: paperless-ngx-data
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-ngx-data
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-ngx-inbox
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: paperless-ngx-data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: paperless-ngx-inbox
          persistentVolumeClaim:
            claimName: paperless-ngx-inbox
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
