apps/paperless-ngx/svc.yaml
---
# Source: paperless-ngx/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: paperless-ngx
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: paperless-ngx
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
