apps/paperless-ngx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
    part-of: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: external
spec:
  rules:
    - host: paperless.home.8none1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  name: http
  tls:
    - hosts:
        - paperless.home.8none1.com
      secretName: paperless-ngx-tls
