apps/paperless-ngx/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: paperless-ngx
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: paperless.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: http
  tls:
    secretName: paperless-ngx-ingress-tls
